syntax = "proto3";

package common.v1;

import "google/protobuf/timestamp.proto";

// Описываем, куда будет положены сгенерированные файла и как будет называться пакет в Go
option go_package = "github.com/crafty-ezhik/rocket-factory/pkg/proto/common/v1;common_v1";

// Данные сессии
message Session {
  string uuid = 1; // UUID сессии
  google.protobuf.Timestamp created_at = 2; // Время создания
  google.protobuf.Timestamp updated_at = 3; // Время последнего обновления
  google.protobuf.Timestamp expires_at = 4; // Время истечения
}

// Данные пользователя
message User {
  string uuid = 1; // UUID пользователя
  UserInfo info = 2; // Базовая информация о пользователе
  google.protobuf.Timestamp created_at = 3; // Время создания
  google.protobuf.Timestamp updated_at = 4; // Время последнего обновления

}

// Информация о пользователе
message UserInfo {
  string login = 1; // Логин
  string email = 2; // Email
  repeated NotificationMethod notification_method = 3; // Каналы уведомлений
}

// Метод уведомлений
message NotificationMethod {
  string provider_name = 1; // Провайдер: telegram, email, push и т.д.
  string target = 2; // Адрес/идентификатор назначения (email, чат-id)
}



